--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Mon Oct 10 20:39:15 IST 2016
-systemProp.http.proxyHost=github.com
+systemProp.http.proxyHost=abhishekgodara
 systemProp.http.nonProxyHosts=*.android.com
 org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=80
